# sysLiuyx-GBA

./: .gitmodules  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_sysliux_gba_GbaCore.cpp
app/src/main/java/com/sysliux/gba/: MainActivity.kt  SysLiuxGbaApp.kt
app/src/main/java/com/sysliux/gba/core/: GbaCore.kt  GbaCoreManager.kt
app/src/main/java/com/sysliux/gba/data/local/: AppDatabase.kt  GameDao.kt  SaveDao.kt
app/src/main/java/com/sysliux/gba/data/local/entity/: GameEntity.kt  SaveEntity.kt
app/src/main/java/com/sysliux/gba/data/preferences/: UserPreferences.kt
app/src/main/java/com/sysliux/gba/di/: AppModule.kt
app/src/main/java/com/sysliux/gba/ui/components/: GameCard.kt  VirtualGamepad.kt
app/src/main/java/com/sysliux/gba/ui/navigation/: AppNavigation.kt
app/src/main/java/com/sysliux/gba/ui/screens/: EmulatorScreen.kt  GameLibraryScreen.kt  GameLibraryViewModel.kt  SaveManagementScreen.kt  SaveManagementViewModel.kt  SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/sysliux/gba/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt
app/src/main/res/values/: colors.xml  styles.xml
docs/superpowers/plans/: 2026-04-04-sysliux-gba-implementation-plan.md
docs/superpowers/specs/: 2026-04-04-sysliux-gba-design.md
gradle/wrapper/: gradle-wrapper.properties
